[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://GUI/transformableUI/TransformableGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/pause_menu/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI_Controller.gd" type="Script" id=5]
[ext_resource path="res://GUI/level_complete/LevelCompleteUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/level_2.tscn" type="PackedScene" id=8]

[node name="Main" type="Spatial"]

[node name="World" type="Spatial" parent="."]
script = ExtResource( 1 )
debug = true
debug_level = ExtResource( 8 )
level_Scenes = [ ExtResource( 8 ), ExtResource( 8 ) ]

[node name="GUI" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GUI_Controller" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="TransformableGUI" parent="GUI" instance=ExtResource( 2 )]
visible = false

[node name="PauseMenu" parent="GUI" instance=ExtResource( 4 )]
visible = false

[node name="LevelCompleteUI" parent="GUI" instance=ExtResource( 6 )]
visible = false

[connection signal="visibility_changed" from="GUI/TransformableGUI" to="GUI/TransformableGUI" method="_on_TransformableGUI_visibility_changed"]
